--- a/mylogin-one/mylogin-one/src/app/InicioAdmin.form
+++ b/mylogin-one/mylogin-one/src/app/InicioAdmin.form
@@ -231,6 +231,10 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="txtEscribeAdmin">
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="txtEscribeAdminMouseClicked"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtEscribeAdminKeyPressed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="180" y="250" width="240" height="-1"/>
