--- a/mylogin-one/mylogin-one/src/app/InicioCoordinador.form
+++ b/mylogin-one/mylogin-one/src/app/InicioCoordinador.form
@@ -237,6 +237,7 @@
     <Component class="javax.swing.JTextField" name="txtEscribeCoordinador">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtEscribeCoordinadorActionPerformed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtEscribeCoordinadorKeyPressed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
